--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,35 @@
-@import url("../styles.css");
+
 @import url("../fonts/fonts.css");
-@import url("../script.js");
+@import url("../scripts/script.js");
 @import url("../vendor/normalize.css");
+@import url("../blocks/page/page.css");
+@import url("../blocks/page/__wrapper/page__wrapper.css");
+@import url("../blocks/page/__overlay/page__overlay.css");
+@import url("../blocks/page/__overlay/_disabled/page__overlay_disabled.css");
+@import url("../blocks/modal/modal.css");
+@import url("../blocks/modal/_disabled/modal_disabled.css");
+@import url("../blocks/modal/__about-me/modal__about-me.css");
+@import url("../blocks/modal/__close/modal__close.css");
+@import url("../blocks/modal/__name/modal__name.css");
+@import url("../blocks/modal/__save/modal__save.css");
+@import url("../blocks/modal/__title/modal__title.css");
+@import url("../blocks/header/header.css");
+@import url("../blocks/logo/logo.css");
+@import url("../blocks/profile/profile.css");
+@import url("../blocks/profile/__about-me/profile__about-me.css");
+@import url("../blocks/profile/__add-button/profile__add-button.css");
+@import url("../blocks/profile/__edit-button/profile__edit-button.css");
+@import url("../blocks/profile/__edit-image/profile__edit-image.css");
+@import url("../blocks/profile/__image/profile__image.css");
+@import url("../blocks/profile/__info/profile__info.css");
+@import url("../blocks/profile/__name-container/profile__name-container.css");
+@import url("../blocks/profile/__name/profile__name.css");
+@import url("../blocks/elements/elements.css");
+@import url("../blocks/element/element.css");
+@import url("../blocks/element/__like-image/element__like-image.css");
+@import url("../blocks/element/__image/element__image.css");
+@import url("../blocks/element/__like-button/element__like-button.css");
+@import url("../blocks/element/__title-container/element__title-container.css");
+@import url("../blocks/element/__title/element__title.css");
+@import url("../blocks/footer/footer.css");
+@import url("../blocks/footer/__note/footer__note.css");
