--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -6,12 +6,15 @@
     width: 150px;
     margin-top: 35px;
     margin-bottom: 35px;
-    height: 50px;
+    min-height: 50px;
     background: none;
 	padding: 0;
     color: white;
 	cursor: pointer;
 	outline: inherit;
+}
+.profile__add-button:hover {
+    opacity: 0.6;
 }
 @media screen and (max-width:1279px) {
     .profile__add-button {
@@ -19,7 +22,4 @@
         margin: 36px 0 0 0;
         width: 282px;
     }
-}
-.profile__add-button:hover {
-    opacity: 0.6;
 }
