--- a/pages/index.css
+++ b/pages/index.css
@@ -13,6 +13,8 @@
 @import url("../blocks/modal/__name/modal__name.css");
 @import url("../blocks/modal/__save/modal__save.css");
 @import url("../blocks/modal/__title/modal__title.css");
+@import url("../blocks/modal/__error/modal__error.css");
+@import url("../blocks/modal/__error/_disabled/modal__error_disabled.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/logo/logo.css");
 @import url("../blocks/profile/profile.css");
