--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,5 +1,6 @@
 .element__image {
     object-fit: cover;
-    width: 100%;
+    width: 282px;
+    height: 282px;
     border-radius: 10px 10px 0px 0px;
 }
