--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -6,6 +6,10 @@
 	cursor: pointer;
 	outline: inherit;
     border: none;
+    background: url(../like-button.svg) center no-repeat;
+    background-size: 100%;
+    min-width: 21px;
+    height: 19px;
 }
 .element__like-button:hover {
     opacity: 0.5;
