--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -4,5 +4,7 @@
     background: #FFFFFF;
     border-radius: 10px;
     display: flex;
+    position: relative;
     flex-direction: column;
+    -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
 }
