--- a/blocks/modal/__error/modal__error.css
+++ b/blocks/modal/__error/modal__error.css
@@ -3,13 +3,19 @@
     color: red;
     font-size: 14px;
     line-height: 17px;
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
     bottom: 0;
-    left: 30%;
+    text-align: center;
+    white-space: nowrap
 }
 @media screen and (max-width:1279px){
     .modal__error {
-        left: 20%;
+        left: 50%;
+        -webkit-transform: translateX(-50%);
+        transform: translateX(-50%);
         bottom: -10px;
     }
-    
 }
