--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -12,6 +12,7 @@
     color: white;
 	cursor: pointer;
 	outline: inherit;
+    transition: 0.5s; 
 }
 .profile__add-button:hover {
     opacity: 0.6;
