--- a/blocks/element/__delete-button/element__delete-button.css
+++ b/blocks/element/__delete-button/element__delete-button.css
@@ -12,8 +12,8 @@
     top: 18px;
     width: 18px;
     height: 20px;
+    transition: 0.5s; 
 }
-.element__delete-button:hover
-{
+.element__delete-button:hover{
     opacity: 0.5;
 }
