--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -9,8 +9,9 @@
     background: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
+    opacity: 1;
+    transition: 0.3s; 
 }
-
 @media screen and (max-width:1279px){
     .modal {
         width: 282px;
