--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,6 +8,7 @@
 	cursor: pointer;
 	outline: inherit;
     border: 1px solid #FFFFFF;
+    transition: 0.5s; 
 }
 @media screen and (max-width:1279px) {
     .profile__edit-button{
