--- a/pages/index.css
+++ b/pages/index.css
@@ -15,6 +15,11 @@
 @import url("../blocks/modal/__title/modal__title.css");
 @import url("../blocks/modal/__error/modal__error.css");
 @import url("../blocks/modal/__error/_disabled/modal__error_disabled.css");
+@import url("../blocks/image-popup/image-popup.css");
+@import url("../blocks/image-popup/__footer/image-popup__footer.css");
+@import url("../blocks/image-popup/__close/image-popup__close.css");
+@import url("../blocks/image-popup/_disabled/image-popup_disabled.css");
+@import url("../blocks/image-popup/__image/image-popup__image.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/logo/logo.css");
 @import url("../blocks/profile/profile.css");
