--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,7 +7,7 @@
 	padding: 0;
 	cursor: pointer;
 	outline: inherit;
-    border: 1px solid #FFFFFF;
+    border: none;
     transition: 0.5s; 
 }
 @media screen and (max-width:1279px) {
