--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -1,21 +1,6 @@
 .modal {
-    z-index: 2;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0);
-    top: 20%;
-    width: 430px;
-    min-height: 330px;
-    background: #FFFFFF;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
+    position: fixed;
     opacity: 1;
+    z-index: 2;
     transition: 0.3s; 
-}
-@media screen and (max-width:1279px){
-    .modal {
-        width: 282px;
-        min-height: 322px;
-    }
-    
 }
