--- a/pages/index.css
+++ b/pages/index.css
@@ -11,7 +11,12 @@
 @import url("../blocks/modal/__close/modal__close.css");
 @import url("../blocks/modal/__name/modal__name.css");
 @import url("../blocks/modal/__save/modal__save.css");
+@import url("../blocks/modal/__save/_disabled/modal__save_disabled.css");
 @import url("../blocks/modal/__title/modal__title.css");
+@import url("../blocks/modal/__error/modal__error.css");
+@import url("../blocks/modal/__error/_visible/modal__error_visible.css");
+@import url("../blocks/modal/__input/modal__input.css");
+@import url("../blocks/modal/__input/_type/modal__input_type_error.css");
 @import url("../blocks/modal/__footer/modal__footer.css");
 @import url("../blocks/modal/__image/modal__image.css");
 @import url("../blocks/modal/__image-close/modal__image-close.css");
