--- a/blocks/modal/__save/modal__save.css
+++ b/blocks/modal/__save/modal__save.css
@@ -1,5 +1,7 @@
 .modal__save{
-    position: absolute;
+    margin-top: 48px;
+    margin-left: 36px;
+    margin-bottom: 36px;
     outline: none;
     color: white;
     border: 1px solid transparent;
@@ -18,6 +20,9 @@
 }
 @media screen and (max-width:1279px){
     .modal__save{
+        margin-top: 46px;
+        margin-left: 22px;
+        margin-bottom: 25px;
         width: 238px;
         height: 46px;
         left: 22px;
