--- a/pages/index.css
+++ b/pages/index.css
@@ -14,6 +14,7 @@
 @import url("../blocks/modal/__save/_disabled/modal__save_disabled.css");
 @import url("../blocks/modal/__title/modal__title.css");
 @import url("../blocks/modal/__error/modal__error.css");
+@import url("../blocks/modal/__form/modal__form.css");
 @import url("../blocks/modal/__error/_visible/modal__error_visible.css");
 @import url("../blocks/modal/__input/modal__input.css");
 @import url("../blocks/modal/__input/_type/modal__input_type_error.css");
