--- a/src/blocks/modal/__name/modal__name.css
+++ b/src/blocks/modal/__name/modal__name.css
@@ -1,7 +1,7 @@
 .modal__name {
     all: unset;
     margin-top: 138px;
-    margin-left: 36px;
+    left: 50%;
     width: 358px;
     font-size: 14px;
     line-height: 30px;
