--- a/src/page/index.css
+++ b/src/page/index.css
@@ -11,6 +11,7 @@
 @import url("../blocks/modal/__about-me/modal__about-me.css");
 @import url("../blocks/modal/__close/modal__close.css");
 @import url("../blocks/modal/__name/modal__name.css");
+@import url("../blocks/modal/__profile/modal__profile.css");
 @import url("../blocks/modal/__save/modal__save.css");
 @import url("../blocks/modal/__save/_disabled/modal__save_disabled.css");
 @import url("../blocks/modal/__title/modal__title.css");
@@ -24,12 +25,16 @@
 @import url("../blocks/modal/_type/_image-card/modal_type_image-card.css");
 @import url("../blocks/modal/_type/_add-card/modal_type_add-card.css");
 @import url("../blocks/modal/_type/_edit-card/modal_type_edit-card.css");
+@import url("../blocks/modal/_type/_confirm/modal_type_confirm.css");
+@import url("../blocks/modal/_type/_profile-edit/modal_type_profile-edit.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/logo/logo.css");
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/profile/__about-me/profile__about-me.css");
 @import url("../blocks/profile/__add-button/profile__add-button.css");
 @import url("../blocks/profile/__edit-button/profile__edit-button.css");
+@import url("../blocks/profile/__edit/profile__edit.css");
+@import url("../blocks/profile/__edit-container/profile__edit-container.css");
 @import url("../blocks/profile/__image/profile__image.css");
 @import url("../blocks/profile/__info/profile__info.css");
 @import url("../blocks/profile/__name-container/profile__name-container.css");
@@ -37,6 +42,8 @@
 @import url("../blocks/elements/elements.css");
 @import url("../blocks/element/element.css");
 @import url("../blocks/element/__image/element__image.css");
+@import url("../blocks/element/__like-container/element__like-container.css");
+@import url("../blocks/element/__like-count/element__like-count.css");
 @import url("../blocks/element/__image-button/element__image-button.css");
 @import url("../blocks/element/__delete-button/element__delete-button.css");
 @import url("../blocks/element/__like-button/element__like-button.css");
